[package]
name = "tanoshi"
version = "0.36.2"
edition = "2024"
rust-version = "1.85.0"
description = "Tanoshi"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"


[lib]
name = "tanoshi"
path = "src/lib.rs"

[[bin]]
name = "tanoshi"
path = "bin/tanoshi.rs"
test = false
bench = false

[features]
default = ["embed", "server"]
embed = ["rust-embed"]
server = ["axum", "headers", "http", "async-graphql-axum", "tower-http"]

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib" }
tanoshi-vm = { path = "../tanoshi-vm" }
tanoshi-tracker = { path = "../tanoshi-tracker" }
tanoshi-notifier = { path = "../tanoshi-notifier" }
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"], default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_yml = "0.0.12"
bincode = { version = "2.0", features = ["serde"] }
async-graphql = { version = "=7.0.16", features = ["chrono", "dataloader", "log", "playground"], default-features = false }
async-graphql-derive = "=7.0.16"
async-graphql-parser = "=7.0.16"
async-graphql-value = "=7.0.16"
async-graphql-axum = { version = "=7.0.16", optional = true }
axum = { version = "0.8", optional = true , default-features = false }
axum-server = "0.7"
axum-extra = { version = "0.10", features = ["typed-header"], default-features = false }
headers = { version = "0.4", optional = true }
http = { version = "1", optional = true , default-features = false }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
], optional = true }
rand = { version = "0.9", default-features = false }
log = { version = "0.4" }
env_logger = { version = "0.11", default-features = false }
jsonwebtoken = { version = "9", default-features = false }
chrono = { version = "0.4", default-features = false }
anyhow = { version = "1", default-features = false }
thiserror = "2"
rust-embed = { version = "8", optional = true , features = ["interpolate-folder-path"] }
mime_guess = { version = "2", default-features = false }
clap = { version = "4", features = ["derive"] }
bytes = { version = "1", default-features = false }
dirs = "6"
directories = "6"
base64 = { version = "0.22", default-features = false }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "sqlite",
    "chrono",
    "json",
    "macros",
    "migrate",
], default-features = false }
reqwest = { version = "0.12", default-features = false }
futures = { version = "0.3", default-features = false }
rust-argon2 = "3"
fancy-regex = { version = "0.15", features = ["std"], default-features = false }
compress-tools = { git = "https://github.com/OSSystems/compress-tools-rs", rev = "615e54549ce08695a45c7f38d3fbd10827ed140c" , features = ["static"]}
zip = { version = "4", default-features = false }
phf = { version = "0.12", features = ["macros"], default-features = false }
human-sort = "0.2"
aes = "0.8"
cbc = "0.1"
once_cell = { version = "1", default-features = false }
async-trait = "0.1"
itertools = { version = "0.14", features = ["use_alloc"], default-features = false }
rayon = "1.10"
flume = { version = "0.11", default-features = false }
