[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tanoshi = { path = "..", default-features = false }
tanoshi-vm = { path = "../../tanoshi-vm", default-features = false }
tokio = { version = "1", features = ["full"] }
async-graphql = { version = "^2.10.0", features = [
    "apollo_tracing",
    "chrono",
    "dataloader",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
