[package]
name = "app"
version = "0.1.0"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
tanoshi = { path = "..", default-features = false, features = [
    "desktop",
    "server",
] }
tanoshi-vm = { path = "../../tanoshi-vm", default-features = false }
tanoshi-tracker = { path = "../../tanoshi-tracker" }
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
